# glance

./: .bzrignore  .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  Authors  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README  README.rst  bandit.yaml  bindep.txt  broken-functional-py3-ssl-tests.txt  broken-functional-py35-ssl-tests.txt  builddeb.sh  lower-constraints.txt  openstack-common.conf  pylintrc  pyproject.toml  requirements-py3.txt  requirements.txt  run_tests.py  run_tests.sh  sampleovf.xml  serial-functests.txt  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  test_git.py  tox.ini
api-ref/source/: conf.py  heading-level-guide.txt  index.rst
common/: flags.py  server.py  utils.py  wsgi.py
common/db/: __init__.py  api.py
debian/: changelog  control  copyright  glance-api.dirs  glance-api.glance-api.upstart  glance-api.install  glance-api.logrotate  glance-api.prerm  glance-client.install  glance-common.dirs  glance-common.install  glance-common.postinst  glance-common.postrm  glance-registry.glance-registry.upstart  glance-registry.install  glance-registry.logrotate  glance-registry.postinst  glance-registry.prerm  pydist-overrides  python-glance-doc.doc-base  python-glance-doc.links  python-glance.install  rules  watch
debian/patches/: disable-network-for-docs.patch  disable-swift-tests.patch  ensure_versioned_db_models.patch  fix-docs-build.patch  series  sql_conn.patch
devstack/: plugin.sh
doc/: requirements.txt
doc/source/: architecture.rst  artifact-types.rst  authentication.rst  cache.rst  client.rst  common-image-properties.rst  community.rst  conf.py  configuring.rst  controllingservers.rst  database_architecture.rst  database_migrations.rst  db-sqlalchemy-migrate.rst  db.rst  deprecate-registry.inc  deprecation-note.inc  domain_implementation.rst  domain_model.rst  formats.rst  gettingstarted.rst  glance.rst  glanceadmin.rst  glanceapi.rst  glanceclient.rst  glancemetadefcatalogapi.rst  glossary.rst  identifiers.rst  image-location-strategy-modules.rst  index.rst  installing.rst  metadefs-concepts.rst  notifications.rst  opts.rst  policies.rst  property-protections.rst  registries.rst  requirements.rst  sample-configuration.rst  signature.rst  statuses.rst  (+1 more)
doc/test/: redirect-tests.txt
etc/: api.conf  glance-api-paste.ini  glance-api.conf  glance-cache-paste.ini  glance-cache.conf  glance-glare-paste.ini  glance-glare.conf  glance-image-import.conf.sample  glance-manage.conf  glance-policy-generator.conf  glance-prefetcher.conf  glance-pruner.conf  glance-reaper.conf  glance-registry-paste.ini  glance-registry.conf  glance-scrubber-paste.ini  glance-scrubber.conf  glance-search.conf  glance-swift.conf.sample  glance.cnf.sample  glance.conf.sample  logging.cnf.sample  ovf-metadata.json.sample  policy.json  property-protections-policies.conf.sample  property-protections-roles.conf.sample  property-protections.conf.sample  rootwrap.conf  schema-image.json  schema-image.json.extended-format-sample  search-policy.json  test-registry.conf  test.conf
etc/metadefs/: README  cim-processor-allocation-setting-data.json  cim-resource-allocation-setting-data.json  cim-storage-allocation-setting-data.json  cim-virtual-system-setting-data.json  compute-aggr-disk-filter.json  compute-aggr-iops-filter.json  compute-aggr-num-instances.json  compute-cpu-mode.json  compute-cpu-pinning.json  compute-guest-memory-backing.json  compute-guest-shutdown.json  compute-host-capabilities.json  compute-hypervisor.json  compute-instance-data.json  compute-libvirt-image.json  compute-libvirt.json  compute-quota.json  compute-randomgen.json  compute-trust.json  compute-vcputopology.json  compute-vmware-flavor.json  compute-vmware-quota-flavor.json  compute-vmware.json  compute-vtpm-hw.json  compute-vtpm.json  compute-watchdog.json  compute-xenapi.json  glance-common-image-props.json  image-signature-verification.json  operating-system.json  software-databases.json  software-runtimes.json  software-webservers.json  storage-volume-type.json
etc/oslo-config-generator/: glance-api.conf  glance-cache.conf  glance-glare.conf  glance-image-import.conf  glance-manage.conf  glance-registry.conf  glance-scrubber.conf
glance/: __init__.py  client.py  context.py  domain.py  gateway.py  housekeeping.py  i18n.py  listener.py  location.py  notifier.py  opts.py  schema.py  scrubber.py  server.py  service.py  sqlite_migration.py  task_cancellation_tracker.py  util.py  utils.py  version.py
glance/api/: __init__.py  authorization.py  cached_images.py  common.py  image_cache.py  policy.py  property_protections.py  versions.py
glance/artifacts/: dependency.py  gateway.py  location.py  updater.py
glance/async/: __init__.py  eventlet_executor.py  taskflow_executor.py  utils.py
glance/async_/: __init__.py  taskflow_executor.py  utils.py
glance/cmd/: __init__.py  agent_notification.py  api.py  cache_cleaner.py  cache_manage.py  cache_prefetcher.py  cache_pruner.py  control.py  glare.py  index.py  manage.py  registry.py  replicator.py  scrubber.py  search.py  (+1 more)
glance/contrib/plugins/artifacts_sample/: __init__.py  base.py  setup.cfg  setup.py
glance/contrib/plugins/artifacts_sample/v1/: artifact.py
glance/contrib/plugins/artifacts_sample/v2/: artifact.py
glance/contrib/plugins/image_artifact/: requirements.txt  setup.cfg  version_selector.py
glance/contrib/plugins/image_artifact/v1/: image.py
glance/contrib/plugins/image_artifact/v1_1/: image.py
glance/contrib/plugins/image_artifact/v2/: image.py
httpd/: README  glance-api-uwsgi.ini  uwsgi-glance-api.conf
playbooks/: post-check-metadata-injection.yaml
rally-jobs/: README.rst  glance.yaml
rally-scenarios/: README.rst  glance.yaml
tests/: stubs.py  test_clients.py  test_data.py  utils.py
tools/: colorizer.py  db-migration  docs-update-header  generate-blacklist.sh  glance_upload.py  install_venv.py  install_venv_common.py  migrate_image_owners.py  nova_to_os_env.sh  pip-requires  rfc.sh  test-requires  test-setup.sh  test_format_inspector.py  with_venv.sh
(+1350 files in other folders)
