[metadata]
name = glance
summary = OpenStack Image Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    etc/glance/metadefs = etc/metadefs/*

[extras]
cinder =
  glance-store!=0.9.0,>=0.7.1 # Apache-2.0
gridfs =
  glance-store!=0.9.0,>=0.7.1 # Apache-2.0
swift =
  glance-store!=0.9.0,>=0.7.1 # Apache-2.0
s3 =
  glance-store!=0.9.0,>=0.7.1 # Apache-2.0
vmware =
  glance-store!=0.9.0,>=0.7.1 # Apache-2.0

[entry_points]
console_scripts =
    glance-api = glance.cmd.api:main
    glance-artifacts = glance.cmd.artifacts:main
    glance-cache-prefetcher = glance.cmd.cache_prefetcher:main
    glance-cache-pruner = glance.cmd.cache_pruner:main
    glance-cache-manage = glance.cmd.cache_manage:main
    glance-cache-cleaner = glance.cmd.cache_cleaner:main
    glance-control = glance.cmd.control:main
    glance-manage = glance.cmd.manage:main
    glance-registry = glance.cmd.registry:main
    glance-replicator = glance.cmd.replicator:main
    glance-scrubber = glance.cmd.scrubber:main
glance.common.image_location_strategy.modules =
    location_order_strategy = glance.common.location_strategy.location_order
    store_type_strategy = glance.common.location_strategy.store_type
oslo.config.opts =
    glance.api = glance.opts:list_api_opts
    glance.registry = glance.opts:list_registry_opts
    glance.scrubber = glance.opts:list_scrubber_opts
    glance.cache= glance.opts:list_cache_opts
    glance.manage = glance.opts:list_manage_opts
glance.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
glance.database.metadata_backend =
    sqlalchemy = glance.db.sqlalchemy.metadata
glance.artifacts.types =
    MyArtifact = glance.contrib.plugins.artifacts_sample:MY_ARTIFACT

glance.flows =
    import = glance.async.flows.base_import:get_flow

glance.flows.import =
    convert = glance.async.flows.convert:get_flow
    introspect = glance.async.flows.introspect:get_flow

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = glance/locale
domain = glance

[update_catalog]
domain = glance
output_dir = glance/locale
input_file = glance/locale/glance.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = glance/locale/glance.pot
