[metadata]
name = glance
summary = OpenStack Image Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/glance/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    etc/glance =
        etc/glance-api.conf
        etc/glance-cache.conf
        etc/glance-manage.conf
        etc/glance-registry.conf
        etc/glance-scrubber.conf
        etc/glance-api-paste.ini
        etc/glance-registry-paste.ini
        etc/policy.json
        etc/rootwrap.conf
    etc/glance/metadefs = etc/metadefs/*
packages =
    glance

[entry_points]
console_scripts =
    glance-api = glance.cmd.api:main
    glance-cache-prefetcher = glance.cmd.cache_prefetcher:main
    glance-cache-pruner = glance.cmd.cache_pruner:main
    glance-cache-manage = glance.cmd.cache_manage:main
    glance-cache-cleaner = glance.cmd.cache_cleaner:main
    glance-control = glance.cmd.control:main
    glance-manage = glance.cmd.manage:main
    glance-registry = glance.cmd.registry:main
    glance-replicator = glance.cmd.replicator:main
    glance-scrubber = glance.cmd.scrubber:main
wsgi_scripts =
    glance-wsgi-api = glance.common.wsgi_app:init_app
glance.common.image_location_strategy.modules =
    location_order_strategy = glance.common.location_strategy.location_order
    store_type_strategy = glance.common.location_strategy.store_type
oslo.config.opts =
    glance.api = glance.opts:list_api_opts
    glance.registry = glance.opts:list_registry_opts
    glance.scrubber = glance.opts:list_scrubber_opts
    glance.cache= glance.opts:list_cache_opts
    glance.manage = glance.opts:list_manage_opts
    glance = glance.opts:list_image_import_opts
oslo.config.opts.defaults =
    glance.api = glance.common.config:set_cors_middleware_defaults
glance.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
glance.database.metadata_backend =
    sqlalchemy = glance.db.sqlalchemy.metadata

glance.flows =
    api_image_import = glance.async.flows.api_image_import:get_flow
    import = glance.async.flows.base_import:get_flow

glance.flows.import =
    convert = glance.async.flows.convert:get_flow
    introspect = glance.async.flows.introspect:get_flow
    ovf_process = glance.async.flows.ovf_process:get_flow

glance.image_import.plugins =
    no_op = glance.async.flows.plugins.no_op:get_flow
    inject_image_metadata=glance.async.flows.plugins.inject_image_metadata:get_flow

glance.image_import.internal_plugins =
    web_download = glance.async.flows._internal_plugins.web_download:get_flow

[build_sphinx]
builder = html man
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = glance/locale
domain = glance

[update_catalog]
domain = glance
output_dir = glance/locale
input_file = glance/locale/glance.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = glance/locale/glance.pot

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
  glance.tests.*
  glance.db.sqlalchemy.*
api_doc_dir = contributor/api
