[metadata]
name = glance
summary = OpenStack Image Service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/glance/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/glance =
        etc/glance-api.conf
        etc/glance-cache.conf
        etc/glance-manage.conf
        etc/glance-scrubber.conf
        etc/glance-api-paste.ini
    etc/glance/metadefs = etc/metadefs/*
packages =
    glance

[entry_points]
console_scripts =
    glance-api = glance.cmd.api:main
    glance-cache-prefetcher = glance.cmd.cache_prefetcher:main
    glance-cache-pruner = glance.cmd.cache_pruner:main
    glance-cache-manage = glance.cmd.cache_manage:main
    glance-cache-cleaner = glance.cmd.cache_cleaner:main
    glance-control = glance.cmd.control:main
    glance-manage = glance.cmd.manage:main
    glance-replicator = glance.cmd.replicator:main
    glance-scrubber = glance.cmd.scrubber:main
    glance-status = glance.cmd.status:main
wsgi_scripts =
    glance-wsgi-api = glance.common.wsgi_app:init_app
glance.common.image_location_strategy.modules =
    location_order_strategy = glance.common.location_strategy.location_order
    store_type_strategy = glance.common.location_strategy.store_type
oslo.config.opts =
    glance.api = glance.opts:list_api_opts
    glance.scrubber = glance.opts:list_scrubber_opts
    glance.cache= glance.opts:list_cache_opts
    glance.manage = glance.opts:list_manage_opts
    glance = glance.opts:list_image_import_opts
oslo.config.opts.defaults =
    glance.api = glance.common.config:set_config_defaults
glance.database.metadata_backend =
    sqlalchemy = glance.db.sqlalchemy.metadata

oslo.policy.enforcer =
    glance = glance.api.policy:get_enforcer
oslo.policy.policies =
    glance = glance.policies:list_rules

glance.flows =
    api_image_import = glance.async_.flows.api_image_import:get_flow
    import = glance.async_.flows.base_import:get_flow
    location_import = glance.async_.flows.location_import:get_flow

glance.flows.import =
    convert = glance.async_.flows.convert:get_flow
    introspect = glance.async_.flows.introspect:get_flow
    ovf_process = glance.async_.flows.ovf_process:get_flow

glance.image_import.plugins =
    no_op = glance.async_.flows.plugins.no_op:get_flow
    inject_image_metadata=glance.async_.flows.plugins.inject_image_metadata:get_flow
    image_conversion=glance.async_.flows.plugins.image_conversion:get_flow
    image_decompression=glance.async_.flows.plugins.image_decompression:get_flow

glance.image_import.internal_plugins =
    web_download = glance.async_.flows._internal_plugins.web_download:get_flow
    copy_image = glance.async_.flows._internal_plugins.copy_image:get_flow
    glance_download = glance.async_.flows._internal_plugins.glance_download:get_flow
