[metadata]
name = artifact
version = 0.0.1
description = A sample plugin for artifact loading
author = Inessa Vasilevskaya
author-email = ivasilevskaya@mirantis.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
glance.artifacts.types =
    MyArtifact = glance.contrib.plugins.artifacts_sample:MY_ARTIFACT
